k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fp-survival
  namespace: fp-survival
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fp-survival
  template:
    metadata:
      labels:
        app: fp-survival
    spec:
      containers:
        - name: web
          image: ghcr.io/markkampstra/fp-survival:54aae9891c33c0076cb77b19e4d5120a1215fd0a
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
