k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fp-survival
  namespace: fp-survival
spec:
  selector:
    app: fp-survival
  ports:
    - port: 80
      targetPort: 80
