k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fp-survival
  namespace: fp-survival
spec:
  ingressClassName: traefik
  rules:
    - host: survival.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fp-survival
                port:
                  number: 80
